src/test/deca/context/invalid/variable/invalid_assign_void_int.deca
// Description:
//    test invalid assignation between void and int
//    Test rule 3.17
//
// Result:
// [Begin Result]
//invalid_assign_void_int.deca:14:8: Variable type cannot be void. Rule 3.17.
// [End Result]
//
// History:
//    created on 06/01/2025

{
   void a = 1;
}
